align item fix

--- a/web-projects/chamber/styles/base.css
+++ b/web-projects/chamber/styles/base.css
@@ -4,7 +4,7 @@
     display: grid;
     grid-template-columns: 1fr;
     background-color: #05B3A7;
-    align-items: center;
+    align-items: left;
     justify-content: left;
     text-align: center;
     padding: 20px;
